fixed bugs in the menu pages, attempted to align the styles better

--- a/styles.css
+++ b/styles.css
@@ -223,16 +223,8 @@ img {vertical-align: middle;}
 
 
 /*start of menu.css page*/
-@media only screen and (min-width: 768px) {
-    #menu{
-        display: flex;
-    }
-    h1 {
-    width: 300px;
-    }
-}
 body {
-    background-color: rgba(82, 76, 78, 0.877);
+    background-color: rgba(180, 172, 172, 0.877);
     }
 
 @font-face {
@@ -271,7 +263,6 @@ h3 {
     -o-border-radius: 10px;
     text-align: center;
     border: 5px 5px;
-    margin: auto;
     font-size: 24px;
     width: 500px;
     font-family: 'Cafe';
@@ -280,6 +271,7 @@ h3 {
 
 img {
     display: flex;
+    flex-direction: row;
     overflow: hidden;
     width:  300px;
     height: 300px;
